# ocrs

./: .gitignore  Dockerfile  README.md  pyproject.toml
ocrs/: app.py
