[tool.poetry]
name = "ocrs"
version = "0.1.0"
description = ""
authors = ["Liu Xiang <liuxiang@ktjr.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ddddocr = "^1.4.7"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
